finished about section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flat-mate</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
         <button class="info" id="login" type="button">Login</button>
       </header>
 
-      <div class="body">
+      <div class="hero-content">
         <div class="left">
           <h1>Hello there, mates!</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste non optio iure deleniti assumenda dignissimos nostrum exercitationem voluptate veritatis quam.</p>
@@ -24,6 +25,20 @@
         <div class="right"></div>
       </div>
     </div>
+  </section>
+
+  <section class="about inner-wrap">
+    <img src="assets/icon-paper-150.png" alt="icon-paper">
+    <div class="content">
+      <h1>Lorem ipsum dolor sit amet.</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora esse non minima reiciendis, vitae enim. Delectus rem, odit quod similique molestias adipisci blanditiis fuga explicabo error, eaque, voluptatem! Nesciunt, veniam!</p>
+    </div>
+    <ul>
+      <li><a href="#"><i class="fa fa-pencil fa-2x"></i></a></li>
+      <br>
+      <br>
+      <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+    </ul>
   </section>
 <!-- <button class="info" type="button">Login</button> -->
 <!-- <button class="sucess" type="button">Read More</button> -->
