added wireframe section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
       <li><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
     </ul>
   </section>
+
+  <section class="wireframe">
+      <div class="inner-wrap">
+        <header class="header-wireframe">
+          <h1>The Modern Era of Web Designing</h1>
+          <h3>We make wireframe ultra fast, leak proof</h3>
+        </header>
+        <div class="content-wireframe">
+          <a href="#"><i class="fa fa-chevron-circle-left fa-3x"></i></a>
+          <img src="assets/wireframe.jpg" alt="wireframe" />
+          <a href="#"><i class="fa fa-chevron-circle-right fa-3x"></i></a>
+        </div>
+      </div>
+  </section>
+
+
 <!-- <button class="info" type="button">Login</button> -->
 <!-- <button class="sucess" type="button">Read More</button> -->
 <!-- <button class="danger" type="button">Send</button> -->
